# cctoolbox

./: .gitignore  README.md
.github/workflows/: build.yml  build_smbox.yml  build_touch.yml  build_uptime.yml  build_web_tools.yml  windows_build.yml
hide-volume-osd/: README.md  hide-volume-osd.py  requirements.txt
pku-check/: README.md  pku-check.c
simple-message-box/: Cargo.toml  README.md
simple-message-box/src/: main.rs
touch/: Cargo.toml  README.md  package.cmd
touch/src/: main.rs
uptime/: Cargo.toml  README.md  package.cmd
uptime/src/: main.rs
web-tools/: README.md  development.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
web-tools/src/routes/: +layout.svelte  +layout.ts  +page.svelte  grep-it.svelte  srt-sync.svelte
