[package]
name = "touch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.17", features = ["derive"] }
dateparser = "0.2.1"
debug_print = "1.0.0"
filetime = "0.2.23"
pretty-duration = "0.1.1"
