[package]
name = "uptime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.17", features = ["derive"] }
windows = { version = "0.52", features = ["Win32_System_SystemInformation"] }
